# gen_file-context

./: Cargo.toml
src/: lib.rs  main.rs
src/config/: mod.rs  types.rs
src/processor/: context_processor.rs  mod.rs
src/progress/: bar.rs
src/utils/: regex_utils.rs
